--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Maze Craze</title>
+    <title>Bubble Rush Shooter</title>
     <link rel="icon" href="img/500x500.png" />
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
@@ -12,66 +12,62 @@
   </head>
 
   <body>
-    <header class="w-l-header">
-      <div class="w-l-header-background"></div>
-      <nav class="w-l-navigation">
-        <ul class="w-l-navigation-list">
-          <li class="w-l-navigation-item">
+    <header class="w-c-header">
+      <div class="w-c-header-background"></div>
+      <nav class="w-c-navigation">
+        <ul class="w-c-navigation-list">
+          <li class="w-c-navigation-item">
             <a href="/">
               <img
                 href="/"
-                class="w-l-title-img w-l-navigation-img"
+                class="w-c-title-img w-c-navigation-img"
                 alt="logo"
-                src="img/header/500x500 (1).png"
+                src="img/header/Logo.png"
               />
             </a>
           </li>
-          <li class="w-l-navigation-item">
-            <a href="/#uniqueness" class="w-l-navigation-link">benefits</a>
+          <li class="w-c-navigation-item">
+            <a href="/#about" class="w-c-navigation-link">about this game</a>
           </li>
-          <li class="w-l-navigation-item">
-            <a href="/#about" class="w-l-navigation-link">game description</a>
-          </li>
-          <li class="w-l-navigation-item">
-            <a href="/#gallery" class="w-l-navigation-link">Gallery</a>
-          </li>
-          <li class="w-l-navigation-item">
-            <a href="/#why" class="w-l-navigation-link">game features</a>
-          </li>
-
-          <li class="w-l-navigation-item">
-            <a href="/#how" class="w-l-navigation-link">Achievements </a>
-          </li>
-          <li class="w-l-navigation-item">
-            <a href="/#characters" class="w-l-navigation-link"
-              >Game Mechanics</a
+          <li class="w-c-navigation-item">
+            <a href="/#uniqueness" class="w-c-navigation-link"
+              >Why You'll Love It</a
             >
           </li>
-          <li class="w-l-navigation-item">
-            <a href="/#reviews" class="w-l-navigation-link">User Reviews</a>
+          <li class="w-c-navigation-item">
+            <a href="/#characters" class="w-c-navigation-link">HOW TO PLAY</a>
+          </li>
+          <li class="w-c-navigation-item">
+            <a href="/#gallery" class="w-c-navigation-link">Gallery</a>
+          </li>
+          <li class="w-c-navigation-item">
+            <a href="/#reviews" class="w-c-navigation-link">Player Feedback</a>
+          </li>
+          <li class="w-c-navigation-item">
+            <a href="/#why" class="w-c-navigation-link">FAQ</a>
           </li>
         </ul>
 
-        <div class="w-l-header-button-wrapper">
-          <a href="/" class="w-l-policy-terms-header-icon-menu">
+        <div class="w-c-header-button-wrapper">
+          <a href="/" class="w-c-policy-terms-header-icon-menu">
             <img
               href="/"
-              class="w-l-title-img"
+              class="w-c-title-img"
               alt="logo"
-              style="width: 40px; height: 40px; border-radius: 4px"
-              src="img/header/500x500 (1).png"
+              style="width: 40px; height: 40px"
+              src="img/header/Logo.png"
             />
           </a>
 
-          <button type="button" class="w-l-header-icon-button" data-menu-button>
+          <button type="button" class="w-c-header-icon-button" data-menu-button>
             <img
-              class="w-l-header-icon w-l-header-icon-menu"
+              class="w-c-header-icon w-c-header-icon-menu"
               src="img/header/icon_burger.png"
               alt="menu "
             />
 
             <svg
-              class="w-l-header-icon w-l-header-icon-close"
+              class="w-c-header-icon w-c-header-icon-close"
               width="40"
               height="40"
               viewBox="0 0 40 40"
@@ -79,8 +75,8 @@
               xmlns="http://www.w3.org/2000/svg"
             >
               <path
-                d="M10.6663 31.6666L8.33301 29.3333L17.6663 19.9999L8.33301 10.6666L10.6663 8.33325L19.9997 17.6666L29.333 8.33325L31.6663 10.6666L22.333 19.9999L31.6663 29.3333L29.333 31.6666L19.9997 22.3333L10.6663 31.6666Z"
-                fill="white"
+                d="M10.6663 31.6666L8.33301 29.3333L17.6663 20L8.33301 10.6666L10.6663 8.33331L19.9997 17.6666L29.333 8.33331L31.6663 10.6666L22.333 20L31.6663 29.3333L29.333 31.6666L19.9997 22.3333L10.6663 31.6666Z"
+                fill="#232323"
               />
             </svg>
           </button>
@@ -90,12 +86,12 @@
 
     <main>
       <section>
-        <div class="w-l-policy-terms-container">
+        <div class="w-c-policy-terms-container">
           <h1>Privacy Policy</h1>
 
           <p>Last Updated: 2025-04-23</p>
           <p>
-            This Privacy Policy applies to the charmingmazeblast.com website
+            This Privacy Policy applies to the colorbubblerush.com website
             (hereinafter referred to as "Website"). By accessing or using our
             services, you agree to the collection and use of information as
             described in this policy.
@@ -141,7 +137,7 @@
           <ul>
             <li>
               <a
-                class="w-l-email-link"
+                class="w-c-email-link"
                 href="https://policies.google.com/privacy"
                 target="_blank"
                 rel=""
@@ -150,7 +146,7 @@
             </li>
             <li>
               <a
-                class="w-l-email-link"
+                class="w-c-email-link"
                 href="https://firebase.google.com/support/privacy"
                 target="_blank"
                 rel=""
@@ -159,7 +155,7 @@
             </li>
             <li>
               <a
-                class="w-l-email-link"
+                class="w-c-email-link"
                 href="https://www.facebook.com/about/privacy/update/printable"
                 target="_blank"
                 rel=""
@@ -204,8 +200,8 @@
           <p>
             If you have any questions or concerns about this Privacy Policy,
             please contact us at
-            <a class="w-l-email-link" href="mailto:info@charmingmazeblast.com"
-              >info@charmingmazeblast.com</a
+            <a class="w-c-email-link" href="mailto:info@colorbubblerush.com"
+              >info@colorbubblerush.com</a
             >.
           </p>
         </div>
@@ -213,19 +209,19 @@
     </main>
 
     <footer
-      class="w-l-footer"
-      style="margin: auto; background: rgba(34, 34, 34, 1)"
+      class="w-c-footer"
+      style="margin: auto; background: rgba(51, 84, 27, 1)"
     >
-      <div class="w-l-footer-container">
-        <div class="w-l-footer-wrapper">
-          <a class="w-l-footer-text" href="/policy.html">Privacy Policy</a>
-          <a class="w-l-footer-text" href="/terms.html"
+      <div class="w-c-footer-container">
+        <div class="w-c-footer-wrapper">
+          <a class="w-c-footer-text" href="/policy.html">Privacy Policy</a>
+          <a class="w-c-footer-text" href="/terms.html"
             >Terms and Conditions
           </a>
-          <a class="w-l-footer-text" href="/cookies.html">Cookies Policy</a>
+          <a class="w-c-footer-text" href="/cookies.html">Cookies Policy</a>
         </div>
-        <p class="w-l-footer-copyright">
-          © 2025 charmingmazeblast.com – All rights reserved
+        <p class="w-c-footer-copyright">
+          © 2025 colorbubblerush.com – All rights reserved
         </p>
       </div>
     </footer>
